<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin"
        android:text="@string/label_congrats_title"
        android:textColor="@color/white"
        android:textSize="80dp"
        />

    <Button
        android:id="@+id/button_chat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin"
        android:text="@string/label_congrats_chat"
        android:background="@drawable/button_primary"
        />

    <Button
        android:id="@+id/button_goon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin"
        android:text="@string/label_congrats_goon"
        android:background="@drawable/button_primary"
        />

</LinearLayout>

